# Probabilistic-Robotics-Lab

./: CMakeLists.txt  README.md  plot_results.py
launch/: prob_lab.launch.py
maps/: turtlebot3_world.pgm  turtlebot3_world.yaml
results/: covariance.csv  interruption.csv  landmark.csv  poses.csv  rmse.csv
results_Q_default_R_default/: covariance.csv  interruption.csv  landmark.csv  poses.csv  rmse.csv
results_Q_high_vertrautModellWenig/: covariance.csv  interruption.csv  landmark.csv  poses.csv  rmse.csv
results_Q_low_vertrautModellSehr/: covariance.csv  interruption.csv  landmark.csv  poses.csv  rmse.csv
results_R_high_vertrautSensorWenig/: covariance.csv  interruption.csv  landmark.csv  poses.csv  rmse.csv
results_R_low_vertrautSensorSehr/: covariance.csv  interruption.csv  landmark.csv  poses.csv  rmse.csv
rviz/: prob_lab.rviz
src/: ekf_node.cpp  evaluation_node.cpp  kf_node.cpp  path_publisher_node.cpp  pf_node.cpp  trajectory_node.cpp
